Feat: general fixes and updates
